[gd_scene load_steps=5 format=3 uid="uid://bcmnpyvksge6i"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_qutd5"]
[ext_resource type="Texture2D" uid="uid://ceo00c80a2spa" path="res://Grafika/UI/hp/bg.png" id="2_pwifv"]
[ext_resource type="Texture2D" uid="uid://behjutkjsmkui" path="res://Grafika/UI/hp/over.png" id="3_8ujy1"]
[ext_resource type="Texture2D" uid="uid://b2luhwo8uxm2g" path="res://Grafika/UI/hp/progress.png" id="4_qmbhl"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_qutd5")

[node name="Score" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.01
anchor_right = 0.05
anchor_bottom = 0.01
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Score"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Score" type="Label" parent="Score/HBoxContainer"]
layout_mode = 2
text = "Score:
"

[node name="ScoreLabel" type="Label" parent="Score/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="MachineGun" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.05
anchor_top = 0.9
anchor_right = 0.05
anchor_bottom = 0.9
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MachineGun"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ammo" type="Label" parent="MachineGun/HBoxContainer"]
layout_mode = 2
text = "Ammo Left:"

[node name="AmmoLabel" type="Label" parent="MachineGun/HBoxContainer"]
layout_mode = 2
text = "1000"

[node name="Rockets" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.9
anchor_top = 0.9
anchor_right = 0.9
anchor_bottom = 0.9
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Rockets"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Rockets" type="Label" parent="Rockets/HBoxContainer"]
layout_mode = 2
text = "Rockets:"

[node name="RocketsLabel" type="Label" parent="Rockets/HBoxContainer"]
layout_mode = 2
text = "3
"

[node name="Time" type="Control" parent="."]
layout_mode = 3
anchor_top = 0.01
anchor_right = 1.0
anchor_bottom = 0.01
grow_horizontal = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Time"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Time" type="Label" parent="Time/HBoxContainer2"]
layout_mode = 2
text = "Time:"

[node name="TimeLabel" type="Label" parent="Time/HBoxContainer2"]
layout_mode = 2
text = "0:00"

[node name="Life" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.9
anchor_top = 0.01
anchor_right = 0.9
anchor_bottom = 0.01
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Life"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Life" type="Label" parent="Life/HBoxContainer3"]
layout_mode = 2
text = "Lifes:"

[node name="LifeLabel" type="Label" parent="Life/HBoxContainer3"]
layout_mode = 2
text = "3"

[node name="GameOver" type="Control" parent="."]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="Label" parent="GameOver/HBoxContainer3"]
visible = false
layout_mode = 2
text = "Game Over"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_under = ExtResource("2_pwifv")
texture_over = ExtResource("3_8ujy1")
texture_progress = ExtResource("4_qmbhl")
